# lit

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
docs/: architecture.md  installation.md  lit imprementation plan.md
lit/: __init__.py  __main__.py
lit/cli/: __init__.py  main.py  output.py
lit/cli/commands/: __init__.py  add.py  branch.py  checkout.py  cherry_pick.py  clone.py  commit.py  config.py  diff.py  fetch.py  init.py  log.py  ls_tree.py  merge.py  pull.py  push.py  rebase.py  refs.py  remote.py  reset.py  show.py  stash.py  status.py  switch.py  tag.py
lit/core/: __init__.py  config.py  diff.py  hash.py  index.py  merge.py  objects.py  refs.py  remote.py  repository.py
lit/operations/: __init__.py  diff.py  merge.py  stash.py
lit/remote/: __init__.py  remote.py
lit/utils/: __init__.py  ignore.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_branch_workflow.py  test_cherry_pick_workflow.py  test_commit_workflow.py  test_config_command.py  test_conflict_workflow.py  test_diff_command.py  test_diff_workflow.py  test_init_workflow.py  test_merge_command.py  test_rebase_workflow.py  test_refs_command.py  test_reset_workflow.py  test_show_command.py  test_stash_workflow.py  test_tag_workflow.py
tests/unit/: test_checkout.py  test_commit.py  test_diff.py  test_fetch.py  test_hash.py  test_ignore.py  test_index.py  test_merge.py  test_objects.py  test_refs.py  test_remote.py  test_repository.py  test_tree.py
